# Forge

./: .env.example  .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FORGE_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: check-version-sync.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_state/: model.rs  store.rs
src-tauri/src/backend/: config.rs  config_manager.rs  env_path.rs  errors.rs  fs_util.rs  ipc.rs  license.rs  mod.rs  process_manager.rs  project_manager.rs  web_app.rs
src-tauri/src/project/: mod.rs
src/components/: Layout.tsx
src/lib/: ipc.ts  types.ts
src/pages/: Dashboard.tsx  Environment.tsx  ProjectDetail.tsx  Settings.tsx  Workspaces.tsx
web/: Dockerfile  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.tsx  index.scss  index.tsx
web/src/api/: api.ts
web/src/components/: AddExistingProject.tsx  AppShell.module.scss  AppShell.tsx  BuildOrchestrator.module.scss  BuildOrchestrator.tsx  ConfigEditor.module.scss  ConfigEditor.tsx  CreateProjectForm.module.scss  CreateProjectForm.tsx  DeployDashboard.module.scss  DeployDashboard.tsx  EnvironmentCheck.module.scss  EnvironmentCheck.test.tsx  EnvironmentCheck.tsx  ErrorBoundary.tsx  LandingScreen.module.scss  LandingScreen.tsx  LicenseGate.module.scss  LicenseGate.tsx  ProjectView.module.scss  ProjectView.tsx  Settings.module.scss  Settings.tsx  Terminal.module.scss  Terminal.tsx  UpdateChecker.module.scss  UpdateChecker.tsx  WebsiteToAppForm.module.scss  WebsiteToAppForm.test.tsx  WebsiteToAppForm.tsx  WorkspaceView.module.scss  WorkspaceView.tsx
web/src/components/ui/: badge.module.scss  badge.tsx  banner.module.scss  banner.tsx  button.module.scss  button.test.tsx  button.tsx  card.module.scss  card.tsx  checkbox.module.scss  checkbox.tsx  collapsible.module.scss  collapsible.tsx  control.module.scss  dialog.module.scss  dialog.test.tsx  dialog.tsx  empty-state.module.scss  empty-state.tsx  external-link.test.tsx  (+15 more)
web/src/lib/: diff.test.ts  diff.ts  tier.ts
web/src/providers/: AppStateProvider.tsx
