[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "Visual project manager for Tauri apps"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
