[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "Visual project manager for Tauri apps"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-updater = "2"
log = "0.4"
env_logger = "0.11"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tauri-plugin-dialog = "2.6.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
